Zad 6 - opis metody pomiaru podobieństwa

--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -141,7 +141,9 @@ W zaimplementowanych przez nas algorytmach wykorzystaliœmy operator s¹siedztwa 2
 \label{fig-schemat}
 \end{figure}
 
-\section{Obiektywna ocena podobieñstwa znajdowanych rozwi¹zañ lokalnie optymalnych dla dwóch wybranych instancji oraz ocena ich podobieñstwa do optimum globalnego}
+\section{Obiektywna ocena podobieñstwa znajdowanych rozwi¹zañ lokalnie optymalnych dla dwóch wybranych instancji}
+
+Poni¿sze tabele zawieraj¹ oceny podobieñstwa rozwi¹zañ znalezionych za pomoc¹ dziesiêciokrotnego odpalenia algorytmu steepest. Jako miarê podobieñstwa przyjêto liczbê wyst¹pieñ takich samych par s¹siadów w obu sekwencjach, podzielon¹ przez d³ugoœæ permutacji. 
 
 \begin{table}[H]
 \begin{tabular}{|l|llllllllll|}
