--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -219,7 +219,7 @@ Ka¿dy wykres pokazuje nam, ¿e zawsze koñczymy w rezultacie lepszym ni¿ ten z któ
 \label{fig-schemat}
 \end{table}
 
-Powy¿sze tabele zawieraj¹ oceny podobieñstwa rozwi¹zañ znalezionych za pomoc¹ dziesiêciokrotnego odpalenia algorytmu steepest dla zbiorów rbg443 oraz rbg403. Jako miarê podobieñstwa przyjêto liczbê wyst¹pieñ takich samych par s¹siadów w obu sekwencjach, podzielon¹ przez d³ugoœæ permutacji. 
+Powy¿sze tabele zawieraj¹ oceny podobieñstwa permutacji bêd¹cych rozwi¹zaniami znalezionymi za pomoc¹ dziesiêciokrotnego odpalenia algorytmu steepest dla zbiorów rbg443 oraz rbg403. Jako miarê podobieñstwa przyjêto liczbê wyst¹pieñ takich samych par s¹siadów w obu sekwencjach, podzielon¹ przez d³ugoœæ permutacji. 
 Jak mo¿na zauwa¿yæ, podobieñstwo pomiêdzy znalezionymi rozwi¹zaniami jest niewielkie. Rozwi¹zania ró¿ni¹ siê od siebie w bardzo du¿ym stopniu.
 
 \section{Wnioski}
