--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -24,7 +24,7 @@
 
 
 \section{Wstêp}
-Problem komiwoja¿era opisywany jest czêsto jako problem wêdrownego sprzedawcy zamierzaj¹cego odwiedziæ pewien zbiór miast. Planuj¹c swoj¹ podró¿, usi³uje on znaleŸæ mo¿liwie najkrótsz¹ trasê, która koñczy³aby siê w punkcie startowym. Zak³ada siê, ¿e ka¿de miasto z wyj¹tkiem pocz¹tkowego, powinno zostaæ odwiedzone tylko jeden raz. Przyjmuje siê równie¿, ¿e ka¿da para miast, po³¹czona jest drog¹ o okreœlonej d³ugoœci.  Opis ten stanowi jedynie ilustracjê  ogólniejszego zagadnienia. Zapisuj¹c problem Komiwoja¿era w jêzyku teorii grafów, mo¿na zdefiniowaæ go, jako problem znajdowania takiego cyklu Hamiltona w pe³nym grafie wa¿onym, dla którego suma wag odwiedzonych krawêdzi jest minimalna. W tak zdefiniowanym problemie mo¿na wyró¿niæ Asymetryczny problem Komiwoja¿era (ATSP). Zak³ada siê w nim, ¿e odleg³oœæ pomiêdzy dwoma miastami A i B mo¿e byæ ró¿na w zale¿noœci od tego, czy sprzedawca przemieszcza siê z punktu A do B, czy te¿ w kierunku przeciwnym. Zarówno symetryczna jak i asymetryczna wersja problemu komiwoja¿era znalaz³a bardzo szerokie zastosowanie w praktyce. Wykorzystywana jest nie tylko w dziedzinach zwi¹zanych z transportem. Problem komiwoja¿era stosowany jest miêdzy innymi w produkcji elektroniki, gdzie optymalizuje siê drogê lasera wypalaj¹cego obwody elektroniczne. W sieciach komputerowych zastosowany jest do optymalizacji tras routingu. Niestety opisywany problem, jest problemem o wyk³adniczej z³o¿onoœci obliczeniowej i nale¿y do klasy problemów NP-trudnych.
+Problem komiwoja¿era opisywany jest czêsto jako problem wêdrownego sprzedawcy zamierzaj¹cego odwiedziæ pewien zbiór miast. Planuj¹c swoj¹ podró¿, usi³uje on znaleŸæ mo¿liwie najkrótsz¹ trasê, która koñczy³aby siê w punkcie startowym. Zak³ada siê, ¿e ka¿de miasto z wyj¹tkiem pocz¹tkowego, powinno zostaæ odwiedzone tylko jeden raz. Przyjmuje siê równie¿, ¿e ka¿da para miast, po³¹czona jest drog¹ o okreœlonej d³ugoœci.  Opis ten stanowi jedynie ilustracjê  ogólniejszego zagadnienia. Zapisuj¹c problem Komiwoja¿era w jêzyku teorii grafów, mo¿na zdefiniowaæ go, jako problem znajdowania takiego cyklu Hamiltona w pe³nym grafie wa¿onym, dla którego suma wag odwiedzonych krawêdzi jest minimalna. W tak zdefiniowanym problemie mo¿na wyró¿niæ Asymetryczny problem Komiwoja¿era (ATSP). Zak³ada siê w nim, ¿e odleg³oœæ pomiêdzy dwoma miastami A i B mo¿e byæ ró¿na w zale¿noœci od tego, czy sprzedawca przemieszcza siê z punktu A do B, czy te¿ w kierunku przeciwnym. Zarówno symetryczna jak i asymetryczna wersja problemu komiwoja¿era znalaz³a bardzo szerokie zastosowanie w praktyce. Jej wykorzystanie nie ogranicza siê jedynie do problemów zwi¹zanych z transportem. Problem komiwoja¿era stosowany jest miêdzy innymi w produkcji elektroniki, gdzie optymalizuje siê drogê lasera wypalaj¹cego obwody elektroniczne. W sieciach komputerowych zastosowany jest do optymalizacji tras routingu. Niestety opisywany problem, jest problemem o wyk³adniczej z³o¿onoœci obliczeniowej i nale¿y do klasy problemów NP-trudnych.
 \section{Operator s¹siedztwa}
 W zaimplementowanych przez nas algorytmach wykorzystaliœmy operator s¹siedztwa 2-opt. W podejœciu tym, ka¿da permutacja oznaczaj¹ca kolejnoœæ odwiedzanych wierzcho³ków w grafie s¹siaduje z permutacjami utworzonymi poprzez zamianê miejscami dwóch liczb w sekwencji.  
 
@@ -61,6 +61,12 @@ Jednak¿e dobre rezultaty obarczone s¹ d³ugimi czasami dzia³ania algorytmów greed
 
 
 \subsection{Porównanie efektywnoœci algorytmów.}
+
+W celu porównania efektywnoœci dzia³ania algorytmów wprowadzono miarê: 
+
+\[Efektywnosc = \frac{1}{ \frac{wynik - optimum}{optimum} * czas }\]
+
+
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=1.0\textwidth]{diagrams/efficiency2log.pdf}
@@ -68,6 +74,8 @@ Jednak¿e dobre rezultaty obarczone s¹ d³ugimi czasami dzia³ania algorytmów greed
 \caption{Porównanie efektywnoœci algorytmów.}
 \label{fig-schemat}
 \end{figure}
+
+Powy¿szy wykres zawiera porównanie efektywnoœci algorytmów. Jak mo¿na zauwa¿yæ najlepsz¹ efektywnoœæ osi¹gnê³y algorytmy greedy oraz heurystyka nearest neighbour. Najni¿sz¹ efektywnoœæ osi¹gnê³y algorytmy losowe. 
 
 \subsection{Porównanie œredniej liczby kroków dla algorytmów steepest i greedy.}
 \begin{figure}[H]
@@ -223,6 +231,9 @@ Powy¿sze tabele zawieraj¹ oceny podobieñstwa permutacji bêd¹cych rozwi¹zaniami z
 Jak mo¿na zauwa¿yæ, podobieñstwo pomiêdzy znalezionymi rozwi¹zaniami jest niewielkie. Rozwi¹zania ró¿ni¹ siê od siebie w bardzo du¿ym stopniu.
 
 \section{Wnioski}
+
+
+
 
 \section{Napotkane trudnoœci}
 
