--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -247,7 +247,10 @@ Jak mo¿na zauwa¿yæ, podobieñstwo pomiêdzy znalezionymi rozwi¹zaniami jest niewie
 \section{Napotkane trudnoœci}
 
 \section{Uzasadnienie wprowadzanych ulepszeñ, propozycje udoskonaleñ i ich spodziewane efekty}
-
+\subsection{Propozycje udoskonaleñ}
+\begin{itemize}
+\item[•]Sprawdzenie dzia³ania operatora s¹siedztwa 3-opt. Prawdopodobnie wiêksze s¹siedztwo znacznie wp³ynê³oby na czas poszukiwania rozwi¹zania przez algorytmy greedy i steepest. Jednoczeœnie algorytmy te, przeszukiwa³yby wiêksz¹ przestrzeñ rozwi¹zañ co pozytywnie wp³ynê³oby na odleg³oœæ wyników od optimum.
+\end{itemize}
 %%%%%%%%%%%%%%%% literatura %%%%%%%%%%%%%%%%
 
 \bibliography{sprawozd}
