--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -186,6 +186,9 @@ Ka¿dy wykres pokazuje nam, ¿e zawsze koñczymy w rezultacie lepszym ni¿ ten z któ
 \label{fig-schemat}
 \end{figure}
 
+Eksperyment przeprowadzono poprzez niezale¿ne uruchamianie algorytmu dla 1..300 restartów i obserwowanie jakie wyniki najlepsze oraz œrednie uda³o nam siê uzyskaæ. 
+Zauwa¿yæ mo¿emy, ¿e algorytmy s¹ mocno zale¿ne od zadanej instancji. Przyk³ad p43 obrazuje nam jak bardzo czêsto trafiamy w okolice optimum, natomiast ftv44 czasami nawet dla znacznej liczby uruchomieñ nie trafia w dobre wyniki. Dla wielu odpaleñ widaæ stabilizowanie siê œrednich. Dla przypadku ftv44 widaæ silny trend poprawiania wyników do oko³o 100 uruchomieñ algorytmu steepest, dla greedy taka zale¿noœæ nie jest tak zauwa¿alna. Widaæ jednak, ¿e powtarzanie uruchomieñ prowadzi do prawdopodobnego poprawienia rezultatu, kosztem natomiast jest czas dzia³ania.
+
 \section{Obiektywna ocena podobieñstwa znajdowanych rozwi¹zañ lokalnie optymalnych dla dwóch wybranych instancji}
 
 
