Dodano uzasadnienie miary oceny efektywności

--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -66,6 +66,8 @@ W celu porównania efektywnoœci dzia³ania algorytmów wprowadzono miarê:
 
 \[Efektywnosc = \frac{1}{ \frac{wynik - optimum}{optimum} * czas }\]
 
+Zosta³a ona tak zaprojektowana aby efektywnoœæ by³a tym wiêksza im mniejsza jest œrednia odleg³oœæ otrzymanych wyników od optimum oraz im krótszy jest czas dzia³ania algorytmu.
+
 
 \begin{figure}[H]
 \begin{center}
