Poprawiono oś x wykresów

--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -82,7 +82,7 @@ Powy¿szy wykres zawiera porównanie efektywnoœci algorytmów. Jak mo¿na zauwa¿yæ n
 \subsection{Porównanie œredniej liczby kroków dla algorytmów steepest i greedy.}
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=1.0\textwidth]{diagrams/avg_steps.pdf}
+\includegraphics[width=1.0\textwidth]{diagrams/avg_stepslog.pdf}
 \end{center}
 \caption{Porównanie œredniej liczby kroków algorytmów greedy i steepest w zale¿noœci od rozmiaru instancji problemu.}
 \label{fig-schemat}
