Komentarze do odległosci od optimum

--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -47,7 +47,12 @@ gdzie l -- liczba wierzcho³ków
 \label{fig-schemat}
 \end{figure}
  
-Jak widaæ na za³¹czonych wykresach w kontekœcie wzglêdnej odleg³oœci od optimum ( liczonej jako odleg³oœæ najlepszego wyniku od optimum podzielonego przez optimum ) algorytmy greedy i steepest maj¹ bardzo zbli¿one rezultaty. Najgorszymi natomiast okaza³y siê byæ algorytmy losowe, zwracaj¹ce losow¹ permutacjê, dzia³aj¹ce tak d³ugo jak odpowiednio greedy i steepest. Widzimy wiêc, ¿e proste heurystyki wypadaj¹ znacznie gorzej ni¿ podejœcia greedy i steepest.
+Jak widaæ na za³¹czonych wykresach w kontekœcie wzglêdnej odleg³oœci od optimum ( liczonej jako odleg³oœæ najlepszego wyniku od optimum podzielonego przez optimum ) algorytmy greedy i steepest maj¹ bardzo zbli¿one rezultaty. Najlepsze wyniki osi¹gn¹³ algorytm Tabu Search. Znalezione przez niego permutacje, okaza³y siê najbli¿sze rozwi¹zaniu optymalnemu. Rezultaty osi¹gniête przez algorytm Simulated annealing (SA), œrednio by³y gorsze od tych znalezionych przez algorytmy Greedy i Steepest. Najlepsze rozwi¹zania znajdywane przez ten algorytm, by³y jednak porównywalne z algorytmem Tabu Search.   
+
+
+Najgorszymi natomiast okaza³y siê byæ algorytmy losowe, zwracaj¹ce losow¹ permutacjê, dzia³aj¹ce tak d³ugo jak odpowiednio greedy i steepest. Widzimy wiêc, ¿e proste heurystyki wypadaj¹ znacznie gorzej ni¿ podejœcia greedy i steepest.
+
+
 
 
 \subsection{Porównanie czasu dzia³ania algorytmów.}
