--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -24,13 +24,30 @@
 
 
 \section{Wstêp}
-Problem komiwoja¿era opisywany jest czêsto jako problem wêdrownego sprzedawcy zamierzaj¹cego odwiedziæ pewien zbiór miast. Planuj¹c swoj¹ podró¿, usi³uje on znaleŸæ mo¿liwie najkrótsz¹ trasê, która koñczy³aby siê w punkcie startowym. Zak³ada siê, ¿e ka¿de miasto z wyj¹tkiem pocz¹tkowego, powinno zostaæ odwiedzone tylko jeden raz. Przyjmuje siê równie¿, ¿e ka¿da para miast, po³¹czona jest drog¹ o okreœlonej d³ugoœci.  Opis ten stanowi jedynie ilustracjê  ogólniejszego zagadnienia. Zapisuj¹c problem Komiwoja¿era w jêzyku teorii grafów, mo¿na zdefiniowaæ go, jako problem znajdowania takiego cyklu Hamiltona w pe³nym grafie wa¿onym, dla którego suma wag odwiedzonych krawêdzi jest minimalna. W tak zdefiniowanym problemie mo¿na wyró¿niæ Asymetryczny problem Komiwoja¿era (ATSP). Zak³ada siê w nim, ¿e odleg³oœæ pomiêdzy dwoma miastami A i B mo¿e byæ ró¿na w zale¿noœci od tego, czy sprzedawca przemieszcza siê z punktu A do B, czy te¿ w kierunku przeciwnym. Zarówno symetryczna jak i asymetryczna wersja problemu komiwoja¿era znalaz³a bardzo szerokie zastosowanie w praktyce. Jej wykorzystanie nie ogranicza siê jedynie do problemów zwi¹zanych z transportem. Problem komiwoja¿era stosowany jest miêdzy innymi w produkcji elektroniki, gdzie optymalizuje siê drogê lasera wypalaj¹cego obwody elektroniczne. W sieciach komputerowych zastosowany jest do optymalizacji tras routingu. Niestety opisywany problem, jest problemem o wyk³adniczej z³o¿onoœci obliczeniowej i nale¿y do klasy problemów NP-trudnych.
+Problem komiwoja¿era opisywany jest czêsto jako problem wêdrownego sprzedawcy zamierzaj¹cego odwiedziæ pewien zbiór miast. Planuj¹c swoj¹ podró¿, usi³uje on znaleŸæ mo¿liwie najkrótsz¹ trasê, która koñczy³aby siê w punkcie startowym. Zak³ada siê, ¿e ka¿de miasto z wyj¹tkiem pocz¹tkowego powinno zostaæ odwiedzone tylko jeden raz. Przyjmuje siê równie¿, ¿e ka¿da para miast po³¹czona jest drog¹ o okreœlonej d³ugoœci.  Opis ten stanowi jedynie ilustracjê  ogólniejszego zagadnienia. Zapisuj¹c Problem Komiwoja¿era w jêzyku teorii grafów, mo¿na zdefiniowaæ go jako problem znajdowania takiego cyklu Hamiltona w pe³nym grafie wa¿onym, dla którego suma wag odwiedzonych krawêdzi jest minimalna. W tak zdefiniowanym problemie mo¿na wyró¿niæ Asymetryczny problem Komiwoja¿era (ATSP). Zak³ada siê w nim, ¿e odleg³oœæ pomiêdzy dwoma miastami A i B mo¿e byæ ró¿na w zale¿noœci od tego, czy sprzedawca przemieszcza siê z punktu A do B, czy te¿ w kierunku przeciwnym. Zarówno symetryczna jak i asymetryczna wersja problemu komiwoja¿era znalaz³a bardzo szerokie zastosowanie w praktyce. Jej wykorzystanie nie ogranicza siê jedynie do problemów zwi¹zanych z transportem. Problem komiwoja¿era stosowany jest miêdzy innymi w produkcji elektroniki, gdzie optymalizuje siê drogê lasera wypalaj¹cego obwody elektroniczne. W sieciach komputerowych zastosowany jest do optymalizacji tras routingu. Niestety opisywany problem jest problemem o wyk³adniczej z³o¿onoœci obliczeniowej i nale¿y do klasy problemów NP-trudnych.
 \section{Operator s¹siedztwa}
 W zaimplementowanych przez nas algorytmach wykorzystaliœmy operator s¹siedztwa 2-opt. W podejœciu tym, ka¿da permutacja oznaczaj¹ca kolejnoœæ odwiedzanych wierzcho³ków w grafie s¹siaduje z permutacjami utworzonymi poprzez zamianê miejscami dwóch liczb w sekwencji. Rozmiar s¹siedztwa (n), mo¿na obliczyæ za pomoc¹ wzoru:
 \[n = \frac{l * (l-1)}{ 2}\]
 gdzie l -- liczba wierzcho³ków  
 
 \section{Porównanie dzia³ania 8 algorytmów i rodzajów s¹siedztw na wszystkich instancjach problemów}
+w ka¿dym z wykresów przyjêliœmy podobn¹ konwencjê nazewnictwa algorytmów wystêpuj¹c¹ w legendach do nich. Oto objaœnienie:
+
+greedy -- algorytm wybieraj¹cy dane rozwi¹zanie przegladaj¹c zadane s¹siedztwo wtedy, kiedy napotka lepsze od aktualnego
+
+random-greedy -- algorytm w pe³ni losowy ( rzucaj¹cy losow¹ permutacjê ) dzia³aj¹cy tak d³ugo jak greedy
+
+nearest neighbour -- prosta heurystyka dobudowuj¹ca najbli¿sze miasto do rozwi¹zania
+random-walker-steepest - algorytm losowo skacz¹cy po s¹siedztwie o czasie dzia³ania takim jak steepest
+
+steepest -- algorytm przeszukuj¹cy ca³e s¹siedztwo i wybieraj¹cy najlepszego kandydata
+random-walker-greedy - algorytm losowo skacz¹cy po s¹siedztwie o czasie dzia³ania takim jak greedy
+
+random-steepest -- algorytm losowy dzia³aj¹cy tak d³ugo jak steepest
+
+tabu-search -- algorytm z zaimplementowanym przeszukiwaniem tabu
+
+sa -- algorytm symulowanego wy¿arzania
 \subsection{Odleg³oœæ od optimum.}
 \begin{figure}[H]
 \begin{center}
@@ -47,7 +64,7 @@ gdzie l -- liczba wierzcho³ków
 \label{fig-schemat}
 \end{figure}
  
-Jak widaæ na za³¹czonych wykresach w kontekœcie wzglêdnej odleg³oœci od optimum ( liczonej jako odleg³oœæ najlepszego wyniku od optimum podzielonego przez optimum ) algorytmy greedy i steepest maj¹ bardzo zbli¿one rezultaty. Najlepsze wyniki osi¹gn¹³ algorytm Tabu Search. Znalezione przez niego permutacje, okaza³y siê najbli¿sze rozwi¹zaniu optymalnemu. Rezultaty osi¹gniête przez algorytm Simulated annealing (SA), œrednio by³y gorsze od tych znalezionych przez algorytmy Greedy i Steepest. Najlepsze rozwi¹zania znajdywane przez ten algorytm, by³y jednak porównywalne z algorytmem Tabu Search.  Najgorszymi natomiast okaza³y siê byæ algorytmy losowe, zwracaj¹ce losow¹ permutacjê, dzia³aj¹ce tak d³ugo jak odpowiednio greedy i steepest. Widzimy wiêc, ¿e proste heurystyki wypadaj¹ znacznie gorzej ni¿ podejœcia greedy i steepest.
+Jak widaæ na za³¹czonych wykresach w kontekœcie wzglêdnej odleg³oœci od optimum ( liczonej jako odleg³oœæ najlepszego wyniku od optimum podzielonego przez optimum ) algorytmy greedy i steepest maj¹ bardzo zbli¿one rezultaty. Najlepsze wyniki osi¹gn¹³ algorytm Tabu Search. Znalezione przez niego permutacje, okaza³y siê najbli¿sze rozwi¹zaniu optymalnemu. Rezultaty osi¹gniête przez algorytm Simulated annealing (SA), œrednio by³y gorsze od tych znalezionych przez algorytmy Greedy i Steepest. Najlepsze rozwi¹zania znajdywane przez ten algorytm, by³y jednak porównywalne z algorytmem Tabu Search.  Najgorszymi natomiast okaza³y siê byæ algorytmy losowe, zwracaj¹ce losow¹ permutacjê, dzia³aj¹ce tak d³ugo jak odpowiednio greedy i steepest. Widzimy wiêc, ¿e proste heurystyki i algorytmy losowe wypadaj¹ znacznie gorzej ni¿ podejœcia greedy i steepest.
 
 
 
@@ -140,7 +157,7 @@ Rozbie¿noœæ tych wykresów jest doœæ oczywista. Steepest zawsze przegl¹da ca³e s¹
 \begin{center}
 \includegraphics[width=1.0\textwidth]{diagrams/best-vs-first/ft53-steepest-efficiency.pdf}
 \end{center}
-\caption{Odleg³oœci od optimum rozwi¹zañ koñcowych w zale¿noœci od odleg³oœci od optimum rozwi¹zañ pocz¹tkowych. Instancja ft53 - algorytm Steepest}
+\caption{Odleg³oœci od optimum rozwi¹zañ koñcowych w zale¿noœci od odleg³oœci od optimum rozwi¹zañ pocz¹tkowych. Instancja ft53 -- algorytm Steepest}
 \label{fig-schemat}
 \end{figure}
 
@@ -159,7 +176,7 @@ Rozbie¿noœæ tych wykresów jest doœæ oczywista. Steepest zawsze przegl¹da ca³e s¹
 \begin{center}
 \includegraphics[width=1.0\textwidth]{diagrams/best-vs-first/ry48p-steepest-efficiency.pdf}
 \end{center}
-\caption{Odleg³oœci od optimum rozwi¹zañ koñcowych w zale¿noœci od odleg³oœci od optimum rozwi¹zañ pocz¹tkowych. Instancja ry48p - algorytm Steepest}
+\caption{Odleg³oœci od optimum rozwi¹zañ koñcowych w zale¿noœci od odleg³oœci od optimum rozwi¹zañ pocz¹tkowych. Instancja ry48p -- algorytm Steepest}
 \label{fig-schemat}
 \end{figure}
 
@@ -200,7 +217,7 @@ Ka¿dy wykres pokazuje nam, ¿e zawsze koñczymy w rezultacie lepszym ni¿ ten z któ
 \begin{center}
 \includegraphics[width=1.0\textwidth]{diagrams/multigreedy_p43.png}
 \end{center}
-\caption{Zale¿noœæ œrednich i najlepszych rozwi¹zañ od liczby restartów algorytmu - greedy dla pliku p43}
+\caption{Zale¿noœæ œrednich i najlepszych rozwi¹zañ od liczby restartów algorytmu -- greedy dla pliku p43}
 \label{fig-schemat}
 \end{figure}
 
@@ -262,6 +279,10 @@ Jak mo¿na zauwa¿yæ, podobieñstwo pomiêdzy znalezionymi rozwi¹zaniami jest niewie
 
 \item[•]Wielokrotne odpalanie algorytmów przeszukiwania lokalnego, zwiêksza szanse na znalezienie wyniku bli¿szego globalnemu optimum.
 
+\item[•]Wyniki dla symulowanego wy¿arzania w du¿ej mierze podyktowane s¹ parametrami jakie zadamy algorytmowi. Nale¿y uwa¿nie je dobraæ, aby uzyskaæ zarówno dobre efekty jak i czas dzia³ania.
+
+
+\item[•]Symulowane wy¿arzanie jest pochodn¹ algorytmu greedy, cechuje siê wiêkszym czasem dzia³ania i które w ekstremalnym przypadku ( obni¿enia temperatury ) mo¿emy sprowadziæ do algorytmu greedy. Jednak ustawianie odpowiedniej temperatury prowadziæ mo¿e do poszukania lepszego optimum, kosztem lokalnego pogorszenia wyników.
 
 \end{itemize}
 
