--- a/sprawozdanie/sprawozd.tex
+++ b/sprawozdanie/sprawozd.tex
@@ -282,7 +282,7 @@ Jak mo¿na zauwa¿yæ, podobieñstwo pomiêdzy znalezionymi rozwi¹zaniami jest niewie
 \item[•]Wyniki dla symulowanego wy¿arzania w du¿ej mierze podyktowane s¹ parametrami jakie zadamy algorytmowi. Nale¿y uwa¿nie je dobraæ, aby uzyskaæ zarówno dobre efekty jak i czas dzia³ania.
 
 
-\item[•]Symulowane wy¿arzanie jest pochodn¹ algorytmu greedy, cechuje siê wiêkszym czasem dzia³ania i które w ekstremalnym przypadku ( obni¿enia temperatury ) mo¿emy sprowadziæ do algorytmu greedy. Jednak ustawianie odpowiedniej temperatury prowadziæ mo¿e do poszukania lepszego optimum, kosztem lokalnego pogorszenia wyników.
+\item[•]Symulowane wy¿arzanie jest pochodn¹ algorytmu greedy, które cechuje siê wiêkszym czasem dzia³ania i które w ekstremalnym przypadku ( obni¿enia temperatury ) mo¿emy sprowadziæ do algorytmu greedy. Jednak ustawianie odpowiedniej temperatury prowadziæ mo¿e do poszukania lepszego optimum, kosztem lokalnego pogorszenia wyników.
 
 \end{itemize}
 
